# ml_handbook

./: .gitignore  00-Preface.ipynb  01-RegressionMetrics.ipynb  01-regressionmetrics.html  02-ClassificationMetrics.ipynb  02-classificationmetrics.html  03-GradientDescent.ipynb  03-gradientdescent.html  04-Gradient Descent Linear Regression.ipynb  04-linearregression.html  Makefile  Sampling.ipynb  Untitled.ipynb  _config.yml  environment.yml  feed.xml  index.html  intro.html  post_build_process.py  postprocess.py  pyproject.toml  redirects.json  requirements.txt  search.html  update.sh
.github/workflows/: deploy.yml
_build/: 01-RegressionMetrics.html  02-ClassificationMetrics.html  03-GradientDescent.html  04-LinearRegression.html  intro.html
_data/: toc.yml
_includes/: footer.html  head.html
_site/: 01-regressionmetrics.html  02-classificationmetrics.html  03-gradientdescent.html  04-linearregression.html  intro.html  redirects.json  search.html
book/: _config.yml  _toc.yml  author.md  intro.md  license.md  myst.yml
content/: 01-RegressionMetrics.ipynb  02-ClassificationMetrics.ipynb  03-GradientDescent.ipynb  03-gradientdescent.ipynb  04-LinearRegression.ipynb  04-linearregression.ipynb  05-regularization.ipynb  05-variants.ipynb  06-adaboost.ipynb  FinalV2.ipynb  Untitled1.ipynb  Untitled2.ipynb  intro.html  intro.md  lda.ipynb
html/: 00-Preface.html  01-RegressionMetrics.html  02-ClassificationMetrics.html  03-GradientDescent.html  04-Gradient Descent Linear Regression.html  custom.css  index.html
scripts/: post_build_process.py  sitemap_generator.py
(+30 files in other folders)
